Minor changes. Added symmetry breaking to the incremental solver